--- a/HromadskyiPatrul/Info.plist
+++ b/HromadskyiPatrul/Info.plist
@@ -65,5 +65,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>isLocalServerURL</key>
+	<false/>
 </dict>
 </plist>
